--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 
                 <div class="relative z-10">
                     <div class="inline-block bg-signal/20 text-signal border border-signal/30 text-xs font-bold px-3 py-1 rounded-full mb-4">PLACES LIMITÉES</div>
-                    <h2 class="font-display font-bold text-3xl md:text-4xl text-white mb-6">Soyez les premiers prévus</h2>
+                    <h2 class="font-display font-bold text-3xl md:text-4xl text-white mb-6">Soyez les premiers prévenus</h2>
                     <p class="text-lightSlate text-lg mb-10 max-w-2xl mx-auto">
                         Nous finalisons le développement. Inscrivez-vous pour être prioritaire lors du lancement officiel et bénéficier d'un tarif préférentiel à vie.
                     </p>
